# amp-hal-st

./: .betterleaks.toml  .clangd  .gitignore  .gitleaks.toml  .gitmodules  .ls-lint.yml  .mega-linter.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  STM32F767.svd  release-please-config.json
.github/: CODEOWNERS  (+2 more)
examples/blink/: CMakeLists.txt  Main.cpp
examples/freertos/: CMakeLists.txt  Main.cpp
examples/helloworld/: CMakeLists.txt  Main.cpp
examples/sesame/: CMakeLists.txt  ExampleClient.der  ExampleClient.prv  ExampleDevice.der  ExampleDevice.prv  ExamplePeerA.key  ExamplePeerB.key  ExampleRoot.der  ExampleRoot.prv  LedsAndButton.proto  Main.cpp
hal_st/cortex/: CMakeLists.txt  EventDispatcherCortex.cpp  EventDispatcherCortex.hpp  Fault.cpp  Fault.hpp  FaultTracer.cpp  FaultTracer.hpp  HardFault.cpp  HardFault.hpp  InterruptCortex.cpp  InterruptCortex.hpp
hal_st/default_init/: Atomic.cpp  CMakeLists.txt  DefaultClockSTM32F746.c  DefaultClockSTM32F767.c  DefaultClockSTM32G431.c  DefaultClockSTM32WB55.c  DefaultInit.c  DefaultInit.cpp  SysCallStubs.cpp
hal_st/instantiations/: CMakeLists.txt  DiscoveryTracerInfrastructure.hpp  DiscoveryUi.hpp  FaultTracer.cpp  FaultTracer.hpp  HardFaultHandler.hpp  NucleoTracerInfrastructure.hpp  NucleoUi.hpp  ResetReason.hpp  StmEventInfrastructure.cpp  StmEventInfrastructure.hpp  StmTracerInfrastructure.cpp  StmTracerInfrastructure.hpp  TracingResetStm.cpp  TracingResetStm.hpp
hal_st/std_periph/: CMakeLists.txt  HowToImport.txt  hal_driver.cmake  stm32f4xx_hal_driver.cmake  stm32f7xx_hal_driver.cmake  stm32g4xx_hal_driver.cmake  stm32wbxx_hal_driver.cmake
hal_st/stm32fxxx/: AdcDmaDifferentialStm.cpp  AdcDmaDifferentialStm.hpp  AdcDmaMultiChannelStm.cpp  AdcDmaMultiChannelStm.hpp  AdcDmaStm.cpp  AdcDmaStm.hpp  AdcTimerTriggeredBase.cpp  AdcTimerTriggeredBase.hpp  AnalogToDigitalPinStm.cpp  AnalogToDigitalPinStm.hpp  BackupRamStm.cpp  BackupRamStm.hpp  CMakeLists.txt  CanStm.cpp  CanStm.hpp  DacStm.cpp  DacStm.hpp  DefaultClockDiscoveryF407G.cpp  DefaultClockDiscoveryF407G.hpp  DefaultClockDiscoveryF746G.cpp  DefaultClockDiscoveryF746G.hpp  DefaultClockDiscoveryH573I.cpp  DefaultClockDiscoveryH573I.hpp  DefaultClockNucleoF429ZI.cpp  DefaultClockNucleoF429ZI.hpp  DefaultClockNucleoF767ZI.cpp  DefaultClockNucleoF767ZI.hpp  DefaultClockNucleoG070RB.cpp  DefaultClockNucleoG070RB.hpp  DefaultClockNucleoG071GB.cpp  DefaultClockNucleoG071GB.hpp  DefaultClockNucleoG071RB.cpp  DefaultClockNucleoG071RB.hpp  DefaultClockNucleoG431RB.cpp  DefaultClockNucleoG431RB.hpp  DefaultClockNucleoG474RE.cpp  DefaultClockNucleoG474RE.hpp  DefaultClockNucleoG474RET.cpp  DefaultClockNucleoG474RET.hpp  DefaultClockNucleoG474xxx.cpp  (+112 more)
hal_st/synchronous_stm32fxxx/: CMakeLists.txt  SynchronousAesStm.cpp  SynchronousAesStm.hpp  SynchronousFlashInternalHighCycleAreaStm.cpp  SynchronousFlashInternalHighCycleAreaStm.hpp  SynchronousFlashInternalStm.cpp  SynchronousFlashInternalStm.hpp  SynchronousGpioStm.cpp  SynchronousGpioStm.hpp  SynchronousHardwareSemaphoreStm.cpp  SynchronousHardwareSemaphoreStm.hpp  SynchronousOneTimeProgrammableFlashStm.cpp  SynchronousOneTimeProgrammableFlashStm.hpp  SynchronousQuadSpiStm.cpp  SynchronousQuadSpiStm.hpp  SynchronousRandomDataGeneratorStm.cpp  SynchronousRandomDataGeneratorStm.hpp  SynchronousSpiMasterStm.cpp  SynchronousSpiMasterStm.hpp  SynchronousSynchronizedRandomDataGeneratorStm.cpp  SynchronousSynchronizedRandomDataGeneratorStm.hpp  SynchronousUartStm.cpp  SynchronousUartStm.hpp  TimeKeeperStm.cpp  TimeKeeperStm.hpp
hal_st_lwip/instantiations_lwip/: CMakeLists.txt  Ethernet.cpp  Ethernet.hpp  EthernetSmiObserver.cpp  EthernetSmiObserver.hpp
infra/xml/: CMakeLists.txt  XmlNavigator.cpp  XmlNavigator.hpp
integration_test/flash_tested/: CMakeLists.txt  Flash.cpp  Flash.hpp  Flash.proto
integration_test/flasher/: CMakeLists.txt  FirmwareSender.cpp  FirmwareSender.hpp  Main.cpp
integration_test/instantiations_st/: CMakeLists.txt  EchoOnSesame.cpp  EchoOnSesame.hpp
integration_test/logic/: CMakeLists.txt  Flash.cpp  Flash.hpp  Gpio.cpp  Gpio.hpp  Peripheral.cpp  Peripheral.hpp  Tested.cpp  Tested.hpp  Tester.cpp  Tester.hpp  Tester.proto  Testing.proto  Uart.cpp  Uart.hpp
integration_test/runner/: CMakeLists.txt  FixtureEcho.cpp  FixtureEcho.hpp  Hooks.cpp  Main.cpp  StepsGpio.cpp  StepsUart.cpp  Waiting.cpp  Waiting.hpp
integration_test/test/: CMakeLists.txt  FixtureEcho.cpp  FixtureEcho.hpp  FixtureEventDispatcher.cpp  FixtureEventDispatcher.hpp  FixtureSystemChanges.hpp  Hooks.cpp  Main.cpp  RunInSync.cpp  RunInSync.hpp  StepsGpio.cpp  StepsUart.cpp  Waiting.cpp  Waiting.hpp
integration_test/tested/: CMakeLists.txt  EchoFromTester.hpp  Main.cpp  MainStm32f767.cpp  MainStm32wb55.cpp  Tested.cpp  Tested.hpp
integration_test/tester/: CMakeLists.txt  EchoFromCloud.hpp  ForwardingEchoToTested.cpp  ForwardingEchoToTested.hpp  Main.cpp  Tester.cpp  Tester.hpp  Tester.proto
services/st_util/: CMakeLists.txt  FirmwareUpgradeService.hpp  FlashOnStBootloaderCommunicator.cpp  FlashOnStBootloaderCommunicator.hpp  FlashOnStUartProgrammer.cpp  FlashOnStUartProgrammer.hpp  FusController.cpp  FusController.hpp  FusFirmwareUpgradeController.cpp  FusFirmwareUpgradeController.hpp  FusOnStBootloaderCommunicator.cpp  FusOnStBootloaderCommunicator.hpp  FusWirelessStackUpgrade.hpp  StBootloaderCommandHandler.hpp  StBootloaderCommandHandlerUart.cpp  StBootloaderCommandHandlerUart.hpp  StBootloaderCommunicator.hpp  StBootloaderCommunicatorUart.cpp  StBootloaderCommunicatorUart.hpp  StUartBootloaderCommandHandler.cpp  StUartBootloaderCommandHandler.hpp  StUartProgrammer.cpp  StUartProgrammer.hpp
st/: CMakeLists.txt  HowToImport.txt  hal_driver.cmake
st/CMSIS_STM32F7xx/: README.md
st/CMSIS_STM32G0xx/: README.md
st/CMSIS_STM32H5xx/: ARM.CMSIS.pdsc
st/CMSIS_STM32WBAxx/: ARM.CMSIS.pdsc  st_readme.txt
st/STM32F4xx_HAL_Driver/: version.txt
st/STM32F7xx_HAL_Driver/: version.txt
st/STM32G0xx_HAL_Driver/: version.txt
st/STM32G4xx_HAL_Driver/: version.txt
(+1370 files in other folders)
